# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.618 2008-04-01 10:23:38 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2008/04/31) Added new SysLog backend config for log sock. Defaulte use is
    'unix'. On Solaris you may need to use 'stream'.
 - (2008/03/31) Added ticket free time as required field support (like
    for already existing ticket free text fields).
 - (2008/03/31) Added missing ticket type as required check if ticket type
    feature is enabled.
 - (2008/03/31) Fixed MD5/SHA1 mixups in SMIME handling on older systems (that have
    MD5 as default, not SHA1).
 - (2008/03/27) Added OpenSearchDescription to support "quick" search for
    ticket numbers for browsers like firefox2.
 - (2008/03/26) Added POP3/POP3S/IMAP/IMAPS support for PostMaster sub system
    (new bin/PostMasterMailbox.pl is replacing old bin/PostMasterPOP3.pl).
    Thanks to Igor Stradwo for this patch!
    NOTE: table pop3_account need to be modified - use scripts/DBUpdate-to-2.3.*.sql
 - (2008/03/26) Added support of renaming of database tables in XML backend and
    database drivers (Kernel/System/DB/*.pm).
    Example:

    <TableAlter NameOld="calendar_event" NameNew="calendar_event_new"/>

 - (2008/03/25) Added enhancement for agent and customer HTTPBasicAuth to strip
    parts of REMOTE_USER or HTTP_REMOTE_USER by using a regexp. Example to
    strip @example.com of login.

    [Kernel/Config.pm]

    # In case you need to replace some part of the REMOTE_USER, you can
    # use the following RegExp ($1 will be new login).
    $Self->{'AuthModule::HTTPBasicAuth::ReplaceRegExp'} = '^(.+?)@.+?$';

 - (2008/03/21) Added enhancement bug# 2773 - HTTPBasicAuth fails when only